--- a/pom.xml
+++ b/pom.xml
@@ -34,10 +34,8 @@
     <infor.version>11.5</infor.version>
 <!--    /Users/lpater/Documents/Infor/web_services_115/Wsdl-->
 <!--    /home/prellerg/HOME/software/inforEamWebServicesToolkit/Wsdl-->
-<!--    <infor.wsdls>/Users/lpater/Documents/Infor/web_services_116/Wsdl</infor.wsdls>-->
-    <infor.wsdls>C:\Users\bborisov\Downloads\web_services_115.tar\web_services_115\Wsdl</infor.wsdls>
+    <infor.wsdls>/Users/lpater/Documents/Infor/web_services_116/Wsdl</infor.wsdls>
   </properties>
-
   <licenses>
     <license>
       <name>GPL-3.0-or-later</name>
