--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
   <groupId>ch.cern.eam</groupId>
   <artifactId>eam-wshub-proxyclient</artifactId>
   <packaging>jar</packaging>
-  <version>11.6-3-SNAPSHOT</version>
+  <version>11.7-0</version>
 
   <name>EAM WS Hub Proxy Client</name>
   <description>JAX-WS aisws aisws generated from Infor EAM Web Services Toolkit WSDLs.</description>
@@ -31,10 +31,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <infor.version>11.5</infor.version>
-<!--    /Users/lpater/Documents/Infor/web_services_115/Wsdl-->
-<!--    /home/prellerg/HOME/software/inforEamWebServicesToolkit/Wsdl-->
-    <infor.wsdls>/Users/lpater/Documents/Infor/web_services_116/Wsdl</infor.wsdls>
+    <infor.version>11.7</infor.version>
+    <infor.wsdls>/home/lpater/Documents/infor/wstoolkit117/Wsdl</infor.wsdls>
   </properties>
   <licenses>
     <license>
