--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
   <groupId>ch.cern.eam</groupId>
   <artifactId>eam-wshub-proxyclient</artifactId>
   <packaging>jar</packaging>
-  <version>11.7-5-SNAPSHOT</version>
+  <version>12.0-SNAPSHOT</version>
 
   <name>EAM WS Hub Proxy Client</name>
   <description>JAX-WS aisws aisws generated from Infor EAM Web Services Toolkit WSDLs.</description>
@@ -31,8 +31,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <infor.version>11.7</infor.version>
-    <infor.wsdls>/home/lpater/Documents/infor/wstoolkit117/Wsdl</infor.wsdls>
+    <infor.version>12.0</infor.version>
+    <infor.wsdls>/home/lpater/Documents/infor/wstoolkit120/Wsdl</infor.wsdls>
   </properties>
   <licenses>
     <license>
