--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <infor.version>12.0</infor.version>
+    <infor.version>12.0-SNAPSHOT</infor.version>
     <infor.wsdls>/home/lpater/Documents/infor/wstoolkit120/Wsdl</infor.wsdls>
   </properties>
   <licenses>
