feat: [EAM-3668] create an observation workorder

--- a/pom.xml
+++ b/pom.xml
@@ -429,6 +429,7 @@
                 <wsdlUrl>${infor.wsdls}/Asset/MP3443_SyncNonconformityObservation_001.wsdl</wsdlUrl>
                 <wsdlUrl>${infor.wsdls}/Asset/MP3444_DeleteNonconformityObservation_001.wsdl</wsdlUrl>
                 <wsdlUrl>${infor.wsdls}/Asset/MP3445_GetNonconformityObservation_001.wsdl</wsdlUrl>
+                <wsdlUrl>${infor.wsdls}/Asset/MP3402_CreateNonconformityObservation_001.wsdl</wsdlUrl>
               </wsdlUrls>
             </configuration>
           </execution>
@@ -717,6 +718,7 @@
                 <sourceFile>${project.build.directory}/generated-sources/wsimport/net/datastream/wsdls/mp3443_syncnonconformityobservation_001/SyncNonconformityObservationPT.java</sourceFile>
                 <sourceFile>${project.build.directory}/generated-sources/wsimport/net/datastream/wsdls/mp3444_deletenonconformityobservation_001/DeleteNonconformityObservationPT.java</sourceFile>
                 <sourceFile>${project.build.directory}/generated-sources/wsimport/net/datastream/wsdls/mp3445_getnonconformityobservation_001/GetNonconformityObservationPT.java</sourceFile>
+                <sourceFile>${project.build.directory}/generated-sources/wsimport/net/datastream/wsdls/mp3402_createnonconformityobservation_001/CreateNonconformityObservationPT.java</sourceFile>
               </sourceFiles>
               <destinationPackage>net.datastream.wsdls.inforws</destinationPackage>
               <classAnnotations>
